--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,18 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.tab-item {
+  display: "flex";
+  align-items: "center";
+  justify-content: "center";
+  height: "150px";
+  background-color: "#fff";
 }
